Загрузка заданий часть 1,2

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 	<h4>Изучение HTML/CSS</h4>
 	<ul>
 		<li>
-			<a href="DZ 2-1/dz_2_1.html">Домашнее задание - часть 2-1</a>
+			<a href="DZ_1/dz_1.html">Часть 1</a>
+		</li>
+		<li>
+			<a href="DZ 2-1/dz_2_1.html">Часть 2-1</a>
+		</li>
+		<li>
+			<a href="DZ_2-2/dz_2_2.html">Часть 2-2</a>
 		</li>
 	</ul>
 	<h4>Изучение JavaScript</h4>
