--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 	<h4>Изучение JavaScript</h4>
 	<ul>
 		<li>
-			<a href="lesson_0203/car.html">Домашнее задание - "Машинка"</a>
+			<a href="lesson_0203/car.html">"Машинка"</a>
+		</li>
+		<li>
+			<a href="calculator/calculator.html">"Калькулятор"</a>
 		</li>
 	</ul>
 </body>
